Function.prototype.toString should not decompile the AST https://bugs.webkit.org/show_bug.cgi?id=142853

Reviewed by Darin Adler.

Following up on Darin's review comments.

* runtime/FunctionConstructor.cpp:
(JSC::constructFunctionSkippingEvalEnabledCheck):


Canonical link: https://commits.webkit.org/161149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182043 268f45cc-cd09-0410-ab3c-d52691b4dbfc